--- a/map.html
+++ b/map.html
@@ -1,5 +1,20 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Get up and go!</title>
-	</head>
+  <head>
+    <title>Go </title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+      }
+    </style>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqCmjvIyTGTAov4tMwu4VJ9Za-MRcSg8"></script>
+    <script type = "text/javascript" src = "js/map.js"></script>
+  </head>
+  <body>
+    <div id="map-canvas"></div>
+  </body>
 </html>
