--- a/map.html
+++ b/map.html
@@ -4,6 +4,7 @@
     <title>Go </title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+	<link rel ="stylesheet" type ="text/css" href ="css/stylesheet.css">
     <style>
       html, body, #map-canvas {
         height: 100%;
