Fixed map not displaying issue. Separated js and css code.

--- a/map.html
+++ b/map.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Go </title>
+    <title>Get Up and Go!</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-	<link rel ="stylesheet" type ="text/css" href ="css/stylesheet.css">
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-    </style>
+	<link rel ="stylesheet" type ="text/css" href ="css/map-stylesheet.css">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqCmjvIyTGTAov4tMwu4VJ9Za-MRcSg8"></script>
     <script type = "text/javascript" src = "js/map.js"></script>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
   </body>
 </html>
