Added sidebar to display directions from point a to point b

--- a/map.html
+++ b/map.html
@@ -9,6 +9,9 @@
     <script type = "text/javascript" src = "js/map.js"></script>
   </head>
   <body>
-    <div id="map"></div>
+    <div id = "map"></div>
+	<div id = "directions">
+		Directions<br>
+	</div>
   </body>
 </html>
