Reverted changes back to where Edmond was working.

--- a/interface.html
+++ b/interface.html
@@ -12,7 +12,7 @@
 	<body>
 		<table>
 			<tr>
-				<button type="button" onclick = "setDist(5)">Button1</button>
+				<button type="button" onclick = "setDist(5)">Button1z</button>
 				<button type="button" onclick = "setDist(50)">Button2</button>
 				<button type="button" onclick = "setDist(500)">Button3</button>
 				<button type="button" onclick = "setDist(5000)">Button4</button>
