--- a/interface2.html
+++ b/interface2.html
@@ -9,7 +9,7 @@
 			function onLoad() {
 				loadVars();
     			if(true) {
-        			document.getElementById("load").innerHTML = "initLat = " + initLat + ", initLong = " + initLong + ", finLat = " + finLat + ", finLong = " + finLong;
+        			document.getElementById("load").innerHTML = "initLat = " + initLat + "<br> initLong = " + initLong + "<br> finLat = " + finLat + "<br> finLong = " + finLong + "<br> vehicle = " + vehicle;
     			}
 			}
 		</script>
