--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
 	<link rel ="stylesheet" type ="text/css" href ="css/map-stylesheet.css">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqCmjvIyTGTAov4tMwu4VJ9Za-MRcSg8"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type = "text/javascript" src = "js/map.js"></script>
   </head>
   <body>
