Insert your birthday wishes here:

--- a/interface.html
+++ b/interface.html
@@ -15,13 +15,13 @@
 	<body>
 
 		<div>
-			<button type="button" onclick = "setVehicle('walk')">Walk</button>
-			<button type="button" onclick = "setVehicle('bike')">Bike</button>
-			<button type="button" onclick = "setVehicle('bus')">Bus</button>
-			<button type="button" onclick = "setVehicle('car')">Car</button>
+			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('walk')">Walk</button>
+			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('bike')">Bike</button>
+			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('bus')">Bus</button>
+			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('car')">Car</button>
 		</div>
 		<div>
-				<button type="button" onclick = "go()"autofocus>Go!</button>
+				<button class = "action-button animate blue large" type="button" onclick = "go()"autofocus>Go!</button>
 		</div>
 				<button type="button" onclick = "getPoint(initLat,initLat,radius)">Test getPoint()</button>
 		</div>
