GLITCH IN GETPOINT

--- a/interface.html
+++ b/interface.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Get Up and Go!</title>
 		<link type="text/css" rel="stylesheet" href="css/interface.css"/>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqCmjvIyTGTAov4tMwu4VJ9Za-MRcSg8"></script>
 		<!--[if lt IE 9]>
 		<script>
 			document.createElement("div");
