--- a/interface.html
+++ b/interface.html
@@ -14,7 +14,12 @@
 	</head>
 
 	<body>
-
+		<header>
+			<h1>Get Up and Go!</h1>
+		</header>
+		<div class = "desc">
+			Description
+		</div>
 		<div>
 			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('walk')">Walk</button>
 			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('bike')">Bike</button>
