--- a/map.html
+++ b/map.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
 	<link rel ="stylesheet" type ="text/css" href ="css/map-stylesheet.css">
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqCmjvIyTGTAov4tMwu4VJ9Za-MRcSg8"></script>
+    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqCmjvIyTGTAov4tMwu4VJ9Za-MRcSg8"></script> -->
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places,visualization&key=AIzaSyBuqCmjvIyTGTAov4tMwu4VJ9Za-MRcSg8"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type = "text/javascript" src = "js/map.js"></script>
   </head>
   <body>
     <div id = "map"></div>
-	<div id = "directions">
-	</div>
+	<div id = "directions"></div>
+	<div id = "places"></div>
   </body>
 </html>
