Update on graphics of the interface

--- a/interface.html
+++ b/interface.html
@@ -15,10 +15,12 @@
 
 	<body>
 		<header>
-			<h1>Get Up and Go!</h1>
+			<h1> GET UP AND GO!</h1>
 		</header>
 		<div class = "desc">
-			Description
+			Have been slacking in your house for days?<br>
+			Want to get some fresh air, but just don't know where to go?<br>
+			Don't worry! We'll find it for you!
 		</div>
 		<div>
 			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('walk')">Walk</button>
@@ -28,10 +30,6 @@
 		</div>
 		<div>
 				<button class = "action-button animate blue large" type="button" onclick = "go()"autofocus>Go!</button>
-		<!-->
 		</div>
-				<button type="button" onclick = "getPoint(initLat,initLat,radius)">Test getPoint()</button>
-		</div>
-		<!-->
 	</body>
 </html>
