Further updates on interface

--- a/interface.html
+++ b/interface.html
@@ -20,7 +20,8 @@
 		<div class = "desc">
 			Have been slacking in your house for days?<br>
 			Want to get some fresh air, but just don't know where to go?<br>
-			Don't worry! We'll find it for you!
+			Don't worry! We'll find it for you!<br><br>
+			Just choose how you would like to travel:
 		</div>
 		<div>
 			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('walk')">Walk</button>
@@ -29,7 +30,7 @@
 			<button class = "action-button animate yellow small" type="button" onclick = "setVehicle('car')">Car</button>
 		</div>
 		<div>
-				<button class = "action-button animate blue large" type="button" onclick = "go()"autofocus>Go!</button>
+				<button class = "action-button animate blue large" type="button" onclick = "go()">Go!</button>
 		</div>
 	</body>
 </html>
